--- a/gestao-de-escala-frontend/package.json
+++ b/gestao-de-escala-frontend/package.json
@@ -3,7 +3,7 @@
     "name": "startbootstrap-sb-admin-2",
     "version": "4.1.1",
     "scripts": {
-        "start": "gulp watch"
+        "start": "node_modules/.bin/gulp watch"
     },
     "description": "An open source Bootstrap 4 admin theme.",
     "keywords": [
