--- a/gestao-escala-backend/src/main/resources/application-dev.properties
+++ b/gestao-escala-backend/src/main/resources/application-dev.properties
@@ -4,8 +4,13 @@
 # 2. Descomente seu Ambiente Pessoal.
 # 3. Antes de efetuar o Push, faça o procedimento reverso das etapas 1 e 2.
 
-#Ambiente Padrão
-spring.datasource.url=jdbc:postgresql://localhost:8080/escala
+##Ambiente Padrão
+#spring.datasource.url=jdbc:postgresql://localhost:5432/escala
+#spring.datasource.username=postgres
+#spring.datasource.password=root
+
+#Ambiente Carlos Casa
+spring.datasource.url=jdbc:postgresql://localhost:5432/escala
 spring.datasource.username=postgres
 spring.datasource.password=root
 
@@ -16,6 +21,7 @@ spring.datasource.password=root
     #spring.datasource.password=agu1234
 
 #!---NÃO ALTERE---!#
-    spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-    #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+    spring.jpa.show-sql=true
     spring.jpa.hibernate.ddl-auto=update
+    spring.datasource.driver-class-name=org.postgresql.Driver
+    spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
