corrigido erro de tag parent no pom

--- a/gestao-escala-backend/src/main/resources/application-dev.properties
+++ b/gestao-escala-backend/src/main/resources/application-dev.properties
@@ -1,10 +1,10 @@
 # AVISO!
-# Configure um AMBIENTE PESSOAL caso sua m·quina possua configuraÁıes de banco de dados distintas do padr„o
-# 1. Comente o "Ambiente Padr„o"
+# Configure um AMBIENTE PESSOAL caso sua m√°quina possua configura√ß√µees de banco de dados distintas do padr√£o
+# 1. Comente o "Ambiente Padr√£o"
 # 2. Descomente seu Ambiente Pessoal.
-# 3. Antes de efetuar o Push, faÁa o procedimento reverso das etapas 1 e 2.
+# 3. Antes de efetuar o Push, fa√ßa o procedimento reverso das etapas 1 e 2.
 
-##Ambiente Padr„o
+##Ambiente Padr√£o
 #spring.datasource.url=jdbc:postgresql://localhost:5432/escala
 #spring.datasource.username=postgres
 #spring.datasource.password=root
@@ -20,7 +20,7 @@ spring.datasource.password=root
     #spring.datasource.username=postgres
     #spring.datasource.password=agu1234
 
-#!---N√O ALTERE---!#
+#!---N√ÉO ALTERE---!#
     spring.jpa.show-sql=true
     spring.jpa.hibernate.ddl-auto=update
     spring.datasource.driver-class-name=org.postgresql.Driver
