--- a/gestao-escala-backend/src/main/resources/application-dev.properties
+++ b/gestao-escala-backend/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@
 # Configure um AMBIENTE PESSOAL caso sua maquina possua configuracoes de banco de dados distintas do padrao
 # 1. Comente o "Ambiente Padrao"
 # 2. Descomente seu Ambiente Pessoal.
-# 3. Antes de efetuar o Push, faça o procedimento reverso das etapas 1 e 2.
+# 3. Antes de efetuar o Push, faÃ§a o procedimento reverso das etapas 1 e 2.
 
 ##Ambiente Padrao
     #spring.datasource.url=jdbc:postgresql://localhost:5432/escala
