--- a/gestao-escala-backend/src/main/resources/application-dev.properties
+++ b/gestao-escala-backend/src/main/resources/application-dev.properties
@@ -4,12 +4,7 @@
 # 2. Descomente seu Ambiente Pessoal.
 # 3. Antes de efetuar o Push, faça o procedimento reverso das etapas 1 e 2.
 
-##Ambiente Padrao
-    #spring.datasource.url=jdbc:postgresql://localhost:5432/escala
-    #spring.datasource.username=postgres
-    #spring.datasource.password=root
-
-#Ambiente Carlos Casa
+#Ambiente Padrao
     spring.datasource.url=jdbc:postgresql://localhost:5432/escala
     spring.datasource.username=postgres
     spring.datasource.password=root
