refactor: comentado exibição de sql no terminal.

--- a/gestao-escala-backend/src/main/resources/application-dev.properties
+++ b/gestao-escala-backend/src/main/resources/application-dev.properties
@@ -16,7 +16,7 @@
     #spring.datasource.password=agu1234
 
 #!---NAO ALTERE---!#
-    spring.jpa.show-sql=true
+    #spring.jpa.show-sql=true
     spring.jpa.hibernate.ddl-auto=update
     spring.datasource.driver-class-name=org.postgresql.Driver
     spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
